Fixed Button left on mobile

--- a/2-JavaScript/Projects/TodoList/src/css/projects.css
+++ b/2-JavaScript/Projects/TodoList/src/css/projects.css
@@ -64,7 +64,6 @@
     width: 100%;
     display: flex;
     gap: 10px;
-    justify-content: center;
     align-items: center;
     font-size: 18px;
     background-color: transparent;
